fix jump to floor # problem by remove navbar-fixed-top css class

--- a/tiny4cocoa/public/css/base.css
+++ b/tiny4cocoa/public/css/base.css
@@ -1,6 +1,6 @@
 body {
-  padding-top: 60px;
-  background-color:#ccc;
+/*  padding-top: 60px;
+*/  background-color:#ccc;
 }
 
 .footer {
